tests/paczka1/fuzzy1/92050851.err
Error in line 1: OOaqDsW S117 93,7
Error in line 4: QTEI0L S836 54,5
Error in line 2: OOaqDsW S836 38,2
Error in line 13: OOaqDsW A167 81,0
Error in line 24: sEg5GoJ1 S117 53,91
Error in line 21: OOaqDsW S117 86,4
